2007-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (IntegralRotateImage): Rotation by 270 degrees
	was wrong.  It was flipped from what it should be.

2007-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_VERSION): Released version 1.1.9.
	* NEWS: Updated NEWS.

2007-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Fix writing PDF with CCITT
	compression.  Addresses SourceForge bug 1209177 "TIFF to PDF CCITT
	compression fails".

2007-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/preview.c (WritePreviewImage): Use ThumbnailImage() to create
	thumbnail.
	* coders/xpm.c (WritePICONImage): Use ThumbnailImage() to create
	thumbnail.
	* coders/pdf.c (WritePDFImage): Use ThumbnailImage() to create
	thumbnail.

2007-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Support writing TIFF to a pipe
	or other non-seekable destination.

2007-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadPNGImage): Make sure that PNG read errors are
	reported to the user.
	* magick/shear.c (IntegralRotateImage): Import implementation from
	CVS HEAD in order to obtain much faster rotation by 90 and 270
	degrees.
	* coders/png.c (png_flush_data): Don't invoke SyncBlob()
	since it does far more than force data to the output file.
	* coders/jpeg.c (TerminateDestination): Don't invoke SyncBlob()
	since it does far more than force data to the output file.

2007-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Don't leak memory in the
	case where the image file contains multiple frames.

2007-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetExecutionPath): Add support for Apple OS-X,
	Linux, and FreeBSD.

2007-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: For Windows MinGW-based build, find Ghostscript