@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
-<TITLE>GraphicsMagick 1.1.9 ChangeLog</TITLE>
+<TITLE>GraphicsMagick 1.1.10 ChangeLog</TITLE>
 	<STYLE>
 	<!--
 		@page { size: 8.5in 11in }
@@ -17,9 +17,17 @@
 <table BORDER=0 WIDTH="100%" >
 <tr>
 <td BGCOLOR="#52799E"><img SRC="../images/right_triangle.png" ALT=">" height=14 width=15>
-<b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick 1.1.9 ChangeLog</font></font></font></b></td>
+<b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick 1.1.10 ChangeLog</font></font></font></b></td>
 </tr>
 </table>
+<p>
+2007-09-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> version.sh (PACKAGE_VERSION): Released version 1.1.10.
+  <LI> NEWS: Updated NEWS.
+
+</UL>
 <p>
 2007-09-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
