@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
-<TITLE>GraphicsMagick 1.1.9 News</TITLE>
+<TITLE>GraphicsMagick 1.1.10 News</TITLE>
 	<STYLE>
 	<!--
 		@page { size: 8.5in 11in }
@@ -17,12 +17,22 @@
 <table BORDER=0 WIDTH="100%" >
 <tr>
 <td BGCOLOR="#52799E"><img SRC="../images/right_triangle.png" ALT=">" height=14 width=15>
-<b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick 1.1.9 News</font></font></font></b></td>
+<b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size="+1">GraphicsMagick 1.1.10 News</font></font></font></b></td>
 </tr>
 </table>
 <p>
-This file was last updated on September 16, 2007.
+This file was last updated on September 19, 2007.
 
+<p>
+Significant changes associated with GraphicsMagick 1.1.10 (released September 19, 2007)
+
+<p>
+  Bugs Fixed:
+
+<UL>
+  <LI> Image rotate by -90/270 degrees was producing wrong output.
+
+</UL>
 <p>
 Significant changes associated with GraphicsMagick 1.1.9 (released September 16, 2007)
 
